k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: ${CI_PROJECT_NAME}
  sessionAffinity: ClientIP
  type: NodePort
status:
  loadBalancer: {}
