k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-max-body-size: 1000M
    nginx.ingress.kubernetes.io/proxy-body-size: 1000M
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ${CI_PROJECT_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  rules:
    - host: ${DEPLOYMENT_HOST}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ${CI_PROJECT_NAME}
                port:
                  number: 8000
  tls:
    - hosts:
        - ${DEPLOYMENT_HOST}
      secretName: ${CI_PROJECT_NAME}-${CI_ENVIRONMENT_SLUG}-tls-secret
